--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^5.3.1"
   },
-  "homepage": "https://github.com/Inzira117/Final_Project_News.git"
+  "homepage": "https://inzira117.github.io/Final_Project_News/"
 }
